--- a/packages.config
+++ b/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="bootstrap" version="3.3.6" targetFramework="net461" />
+  <package id="bootstrap.less" version="3.3.6" targetFramework="net461" />
+  <package id="BuildWebCompiler" version="1.10.310" targetFramework="net461" />
   <package id="jQuery" version="2.2.3" targetFramework="net461" />
   <package id="knockout.TypeScript.DefinitelyTyped" version="1.1.2" targetFramework="net461" />
   <package id="knockoutjs" version="3.4.0" targetFramework="net461" />
