--- a/packages.config
+++ b/packages.config
@@ -3,6 +3,9 @@
   <package id="bootstrap.less" version="3.3.6" targetFramework="net461" />
   <package id="BuildWebCompiler" version="1.10.310" targetFramework="net461" />
   <package id="jQuery" version="2.2.3" targetFramework="net461" />
+  <package id="jquery.TypeScript.DefinitelyTyped" version="3.0.6" targetFramework="net461" />
   <package id="knockout.TypeScript.DefinitelyTyped" version="1.1.2" targetFramework="net461" />
   <package id="knockoutjs" version="3.4.0" targetFramework="net461" />
+  <package id="RequireJS" version="2.2.0" targetFramework="net461" />
+  <package id="requirejs.TypeScript.DefinitelyTyped" version="0.4.3" targetFramework="net461" />
 </packages>
